--- a/Front-end-demo/index.html
+++ b/Front-end-demo/index.html
@@ -198,37 +198,23 @@
         <h1>Thành viên trong nhóm</h1>
 <img src="https://static.naukimg.com/s/0/0/i/ab-interview.png" alt="">
     </div>
-    <div id="interviewcard1" >
-        <h3>Interview questions by company</h3>
-      <div>
-            <div>
-                <img  src="https://static.naukimg.com/s/0/0/i/ambitionbox-comp/cognizant.png" alt="">
-                <h5>Cognizant</h5>
-            </div>
-            <div>
-             <img  src="https://static.naukimg.com/s/0/0/i/ambitionbox-comp/amazon.png" alt="">
-             <h5>Amazon</h5>
-            </div>
-            <div>
-            <img src="https://static.naukimg.com/s/0/0/i/ambitionbox-comp/flipkart.png" alt="">
-             <h5>Flipkart</h5>
-            </div>
-            <div>
-            <img src="https://static.naukimg.com/s/0/0/i/ambitionbox-comp/tcs.png" alt="">
-            <h5>TCS</h5>
-            </div>
-            <div>
-             <img src="https://static.naukimg.com/s/0/0/i/ambitionbox-comp/byjus.png" alt="">
-            <h5>Byjus's</h5>
-            </div>
-            <div>
-             <img src="https://static.naukimg.com/s/0/0/i/ambitionbox-comp/accenture.png" alt="">
-            <h5>Accenture</h5>
-            </div>
-      </div>
-    </div>
     <div id="interviewcard2">
-         <h3>Interview questions by role</h3>
+        <h3>Trương Thuận Hòa</h3>
+        <p class="css-ul-hover">Software Engineer 
+           (7.2K+ questions)</p>
+        <p class="css-ul-hover"> Business Analyst  
+           (2.8K+ questions)</p>
+        <p class="css-ul-hover">Consultant  
+           (2.4K+ questions)</p>
+        <p class="css-ul-hover">Financial Analyst  
+           (894 questions)</p>
+        <p class="css-ul-hover">Sales & Marketing  
+           (991 questions)</p>
+        <p class="css-ul-hover"> Quality Engineer  
+           (1.3K+ questions)</p>
+   </div>
+    <div id="interviewcard2">
+         <h3>Ngô Anh Lượng</h3>
          <p class="css-ul-hover">Software Engineer 
             (7.2K+ questions)</p>
          <p class="css-ul-hover"> Business Analyst  
@@ -241,7 +227,6 @@
             (991 questions)</p>
          <p class="css-ul-hover"> Quality Engineer  
             (1.3K+ questions)</p>
-         <button><a href="#">View All Roles</a></button>
     </div>
 </div>
 
