--- a/Front-end-demo/index.html
+++ b/Front-end-demo/index.html
@@ -195,38 +195,25 @@
 <!-- Interview Prepration Section  -->
 <div id="interview">
     <div id="interviewimg">
-        <h1>Thành viên trong nhóm</h1>
+        <h1>Người sáng lập</h1>
 <img src="https://static.naukimg.com/s/0/0/i/ab-interview.png" alt="">
     </div>
     <div id="interviewcard2">
         <h3>Trương Thuận Hòa</h3>
-        <p class="css-ul-hover">Software Engineer 
-           (7.2K+ questions)</p>
-        <p class="css-ul-hover"> Business Analyst  
-           (2.8K+ questions)</p>
-        <p class="css-ul-hover">Consultant  
-           (2.4K+ questions)</p>
-        <p class="css-ul-hover">Financial Analyst  
-           (894 questions)</p>
-        <p class="css-ul-hover">Sales & Marketing  
-           (991 questions)</p>
-        <p class="css-ul-hover"> Quality Engineer  
-           (1.3K+ questions)</p>
+        <p class="css-ul-hover"> Software Engineer</p>
+        <p class="css-ul-hover">HCMUTE</p>
+        <p class="css-ul-hover">03789xxxxx</p>
+        <p class="css-ul-hover">fb.com/truongthuanhoa.7</p>
+        <p class="css-ul-hover">truongthuanhoa@gmail.com</p>
    </div>
     <div id="interviewcard2">
+        <!-- Thêm cái hình -->
          <h3>Ngô Anh Lượng</h3>
-         <p class="css-ul-hover">Software Engineer 
-            (7.2K+ questions)</p>
-         <p class="css-ul-hover"> Business Analyst  
-            (2.8K+ questions)</p>
-         <p class="css-ul-hover">Consultant  
-            (2.4K+ questions)</p>
-         <p class="css-ul-hover">Financial Analyst  
-            (894 questions)</p>
-         <p class="css-ul-hover">Sales & Marketing  
-            (991 questions)</p>
-         <p class="css-ul-hover"> Quality Engineer  
-            (1.3K+ questions)</p>
+         <p class="css-ul-hover"> Software Engineer</p>
+        <p class="css-ul-hover">HCMUTE</p>
+        <p class="css-ul-hover">0124xxxxx</p>
+        <p class="css-ul-hover">fb.com/ngoanhluong.11</p>
+        <p class="css-ul-hover">ngoanhluong@gmail.com</p>
     </div>
 </div>
 
