--- a/Front-end-demo/create_update_page.html
+++ b/Front-end-demo/create_update_page.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,69 +11,32 @@
     <meta name="theme-color" content="#ffffff">
     <title>JobHunt.com//Edit data</title>
     <link rel="stylesheet" href="css/admin_page.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body id="bdy_edit_pge" >
+
+<body id="bdy_edit_pge">
     <div class="topnav" id="myTopnav">
-        
+
         <a href="./admin_page.html" class="active"><img src="./images/logo/jobHunt1.com.png" alt=""></a>
-        
+
         <a href="./admin_page.html" class="content">Administrative</a>
         <a href="#news" class="content">Term of Use</a>
         <a href="./index.html" class="content">Visit Our Website</a>
         <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
-      </div>
-    <div id="edit_bar">
-        <button id="edit_pge_btn"></button>
     </div>
 
-    <div class="form_of_editing">
-        <form id="edit_form">
-        <div id="inside_form">
-            <div class="comp_data" id="comp_nme">
-                <label for="compmyName">Company : </label>
-                <input type="text" id="company_name" placeholder="Enter URL of logo here..." required>
-             </div>
-             <div class="comp_data" id="comp_lgo">
-                <label for="companylogo">URL of Logo : </label>
-             <input type="text" id="company-logo" placeholder="Enter URL of logo here..." required >
-             </div>
-             <div class="comp_data" id="job_rle">
-                <label for="jobrole">Job Role : </label>
-                <input type="text" id="company_job_role" placeholder="Enter Job Role here..." required readonly>
-             </div>
-             <div class="comp_data" id="comp_cntct">
-                <label for="contact">Contact : </label>
-                <input type="number" id="company_contact" placeholder="Enter Company contact here..."  required readonly>
-             </div>
-             <div class="comp_data" id="comp_exp">
-                <label for="experience">Experience : </label>
-                <input type="text" id="company_exp" placeholder="Enter Job Role here..." placeholder="Enter experience here..." required readonly>
-             </div>
-             <div class="comp_data" id="comp_slry">
-                <label for="salary">Salary : </label>
-                <input type="text" id="company_salary" placeholder="Enter salary details here..." required readonly>
-             </div>
-             <div class="comp_data" id="comp_lct">
-                <label for="location">Loacation : </label>
-                <input type="text" id="company_loca" placeholder="Enter Company location here..." required readonly>
-             </div>
-             <div class="comp_data" id="comp_desc">
-                <p><label for="description">Description : </label></p>
-                <textarea name="desc" id="company_desc" cols="30" rows="10" placeholder="Enter Company description here..." required readonly></textarea>
-             </div>
-        </div>
-        <div class="submit_btn">
-            <div class="cancel_btn">
-                <button id="cancel"><a href="./admin_page.html"> Cancel</a>
-               </button>
-            </div>
-            <div class="save_btn">
-                <button id="save">Save</button>
-            </div>
-        </div>
-        </form>
+    <div class="main">
+
     </div>
+
     <script src="js/create_update_page.js"></script>
+    <script>
+        var form = new Validator('#edit_form');
+        form.onSubmit = function(formData) {
+            console.log(formData);
+        };
+    </script>
 </body>
+
 </html>
