--- a/Front-end-demo/worklist.html
+++ b/Front-end-demo/worklist.html
@@ -214,24 +214,24 @@
               </div>
               <div>
                 <div>
-                  <input type="checkbox" value="Pune" />
-                  <label for="">Pune</label>
+                  <input type="checkbox" value="thanh_pho_ho_chi_minh" />
+                  <label for="">Hồ Chí Minh</label>
                 </div>
                 <div>
-                  <input type="checkbox" value="Noida" />
-                  <label for="">Noida</label>
+                  <input type="checkbox" value="thanh_pho_ha_noi" />
+                  <label for="">Hà Nội</label>
                 </div>
                 <div>
-                  <input type="checkbox" value="Mumbai" />
-                  <label for="">Mumbai</label>
+                  <input type="checkbox" value="tinh_binh_dinh" />
+                  <label for="">Bình Định</label>
                 </div>
                 <div>
-                  <input type="checkbox" value="Hyderabad" />
-                  <label for="">Hyderabad</label>
+                  <input type="checkbox" value="tinh_an_giang" />
+                  <label for="">An Giang</label>
                 </div>
                 <div>
-                  <input type="checkbox" value="chennai" />
-                  <label for="">Chennai</label>
+                  <input type="checkbox" value="tinh_binh_duong" />
+                  <label for="">Bình Dương</label>
                 </div>
               </div>
             </li>
@@ -242,12 +242,20 @@
               </div>
               <div>
                 <div>
-                  <input type="checkbox" value="4" />
-                  <label for="">upto 4</label>
+                  <input type="checkbox" value="50" />
+                  <label for=""> <= $50 </label>
                 </div>
                 <div>
-                  <input type="checkbox" value="4" />
-                  <label for="">4 or more</label>
+                  <input type="checkbox" value="100" />
+                  <label for=""> $51  -  $100 </label>
+                </div>
+                <div>
+                  <input type="checkbox" value="200" />
+                  <label for=""> $101 - $200 </label>
+                </div>
+                <div>
+                  <input type="checkbox" value="201" />
+                  <label for=""> > $200 </label>
                 </div>
               </div>
             </li>
