--- a/Front-end-demo/create_update_page.html
+++ b/Front-end-demo/create_update_page.html
@@ -30,13 +30,59 @@
 
     </div>
 
-    <script src="js/create_update_page.js"></script>
-    <script>
-        var form = new Validator('#edit_form');
-        form.onSubmit = function(formData) {
-            console.log(formData);
-        };
-    </script>
 </body>
+
+<script src="js/create_update_page.js"></script>
+<script>
+    var form = new Validator('#edit_form');
+    form.onSubmit = function(formData) {
+        console.log(formData);
+    };
+</script>
+
+<script>
+    getDataThanhPho();
+
+    async function getDataThanhPho() {
+        const response = await fetch('https://provinces.open-api.vn/api/?depth=2')
+        const data = await response.json();
+        length = data.length;
+        var temp = "";
+        for (i = 0; i < length; i++) {
+            temp += "<option";
+            temp += " value='" + data[i].codename + "'>";
+            temp += data[i].name + "</option>";
+        }
+
+        document.getElementById("locationThanhPho").innerHTML = temp;
+    }
+
+    let selectorThanhPho = document.getElementById("locationThanhPho")
+
+    async function getDataQuanHuyen() {
+        const response = await fetch('https://provinces.open-api.vn/api/?depth=2')
+        const data01 = await response.json();
+        length = data01.length;
+        let data02 = data01[0].districts;
+        for (i = 0; i < length; i++) {
+            if (data01[i].code == selectorThanhPho.value) {
+                data02 = data01[i].districts;
+                break;
+            }
+        }
+
+        var temp = "";
+        length2 = data02.length;
+        for (i = 0; i < length2; i++) {
+            temp += "<option";
+            temp += " value=" + data02[i].codename + ">";
+            temp += data02[i].name + "</option>";
+        }
+
+        document.getElementById("locationQuanHuyen").innerHTML = temp;
+    }
+
+    selectorThanhPho.addEventListener('change', getDataQuanHuyen);
+</script>
 
 </html>
