--- a/Front-end-demo/create_update_page.html
+++ b/Front-end-demo/create_update_page.html
@@ -50,7 +50,7 @@
         var temp = "";
         for (i = 0; i < length; i++) {
             temp += "<option";
-            temp += " value='" + data[i].codename + "'>";
+            temp += " value='" + data[i].code + "'>";
             temp += data[i].name + "</option>";
         }
 
@@ -75,7 +75,7 @@
         length2 = data02.length;
         for (i = 0; i < length2; i++) {
             temp += "<option";
-            temp += " value=" + data02[i].codename + ">";
+            temp += " value=" + data02[i].code + ">";
             temp += data02[i].name + "</option>";
         }
 
