--- a/Front-end-demo/create_update_page.html
+++ b/Front-end-demo/create_update_page.html
@@ -42,6 +42,7 @@
 
 <script>
     getDataThanhPho();
+    getDataTypeWork();
 
     async function getDataThanhPho() {
         const response = await fetch('https://provinces.open-api.vn/api/?depth=2')
@@ -83,6 +84,15 @@
     }
 
     selectorThanhPho.addEventListener('change', getDataQuanHuyen);
+
+    let select_hours = document.getElementById("hours");
+    select_hours.addEventListener('change', setDataIncome);
+
+    let select_quantity = document.getElementById("quantity");
+    select_quantity.addEventListener('change', setDataIncome);
+
+    let selector_typework = document.getElementById("typework");
+    selector_typework.addEventListener('change', setDataIncome);
 </script>
 
 </html>
