--- a/Front-end-demo/signin.html
+++ b/Front-end-demo/signin.html
@@ -149,8 +149,8 @@
 
             <div id="navright">
                 <div>
-                    <button id="loginbtn">Login</button>
-                    <button id="registerbtn">Register</button>
+                    <button id="loginbtn">Đăng nhập</button>
+                    <button id="registerbtn">Đăng ký</button>
                     <ul id="adminhov"><a class="css-ul css-ul-hover1-menu" href="#">For Employer</a>
                         <div id="adminlogin">
                             <div><a class="css-ul-hover" href="admin_page.html">Employee Login</a></div>
