--- a/Front-end-demo/create_update_page.html
+++ b/Front-end-demo/create_update_page.html
@@ -18,7 +18,7 @@
 <body id="bdy_edit_pge">
     <div class="topnav" id="myTopnav">
 
-        <a href="./admin_page.html" class="active"><img src="./images/logo/jobHunt1.com.png" alt=""></a>
+        <a href="./index.html" class="active"><img src="./images/logo/jobHunt1.com.png" alt=""></a>
 
         <a href="./admin_page.html" class="content">Administrative</a>
         <a href="#news" class="content">Term of Use</a>
@@ -51,7 +51,7 @@
         var temp = "";
         for (i = 0; i < length; i++) {
             temp += "<option";
-            temp += " value='" + data[i].code + "'>";
+            temp += " value='" + data[i].codename + "'>";
             temp += data[i].name + "</option>";
         }
 
@@ -66,7 +66,7 @@
         length = data01.length;
         let data02 = data01[0].districts;
         for (i = 0; i < length; i++) {
-            if (data01[i].code == selectorThanhPho.value) {
+            if (data01[i].codename == selectorThanhPho.value) {
                 data02 = data01[i].districts;
                 break;
             }
@@ -76,7 +76,7 @@
         length2 = data02.length;
         for (i = 0; i < length2; i++) {
             temp += "<option";
-            temp += " value=" + data02[i].code + ">";
+            temp += " value=" + data02[i].codename + ">";
             temp += data02[i].name + "</option>";
         }
 
